--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -32,8 +32,8 @@ input[type=range]::-webkit-slider-runnable-track {
     height: 8.4px;
     cursor: pointer;
     animate: 0.2s;
-    background: #367ebd;
-    border-radius: 10px;
+    background: linear-gradient(to right, #e60006, #05e507);
+    /*border-radius: 10px;*/
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -47,7 +47,7 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: -8px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
+    background: linear-gradient(to right, #e60006, #05e507);
 }
 input[type=range]::-moz-range-track {
     width: 100%;
